# P1220

./: .gitignore  CLAUDE.md  CassetteFuturism.md  Readme.md  Todo.md  更新日志.md
ai-trpg-engine/: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json
ai-trpg-engine/src/: App.tsx  index.css  main.tsx
ai-trpg-engine/src-tauri/: Cargo.toml  tauri.conf.json
ai-trpg-engine/src-tauri/capabilities/: default.json
ai-trpg-engine/src-tauri/icons/: icon.icns
ai-trpg-engine/src-tauri/src/: commands.rs  lib.rs  main.rs
ai-trpg-engine/src/components/character/: AvatarUpload.tsx  CreationModeSelector.tsx  DetailedProfileEditor.tsx  NarrativeDescriptionEditor.tsx
ai-trpg-engine/src/components/game/: CharacterPanel.tsx  GameDialogue.tsx  index.ts
ai-trpg-engine/src/components/lorebook/: LorebookEditor.tsx  LorebookEntryCard.tsx  LorebookEntryForm.tsx  index.ts
ai-trpg-engine/src/components/worldline/: WorldlineManager.tsx
ai-trpg-engine/src/data/: backgrounds.json  presetCharacters.ts  talents.json  worldlines.json
ai-trpg-engine/src/data/prompts/: base.txt
ai-trpg-engine/src/pages/: CharacterCreation.tsx  CharacterManagement.tsx  Config.tsx  GameMain.tsx  Landing.tsx  LogViewer.tsx  LogWindow.tsx  LorebookManagement.tsx
ai-trpg-engine/src/services/: aiService.ts  characterCardService.ts  characterService.ts  checkService.ts  logService.ts  lorebookService.ts  saveService.ts  settingImportService.ts
ai-trpg-engine/src/stores/: characterStore.ts  gameStore.ts
ai-trpg-engine/src/utils/: random.ts  tauri.ts  types.ts  windowManager.ts
(+3 files in other folders)
